--- a/wics-website-vue/index.html
+++ b/wics-website-vue/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/UMWICS Logo.png">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WICS UManitoba</title>
+  <title>Women in Computer Science</title>
 </head>
 
 <body>
